--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1730,7 +1730,8 @@
 %     \@@_generate_variant_loop_end:nwwwNNnn,
 %     \@@_generate_variant_loop_long:wNNnn,
 %     \@@_generate_variant_loop_invalid:NNwNNnn,
-%     \@@_generate_variant_loop_special:NNwNNnn
+%     \@@_generate_variant_loop_special:NNwNNnn,
+%     \@@_generate_variant_loop_warning:nnxxxx
 %   }
 %   \begin{arguments}
 %     \item Last few consecutive letters common between the base and
@@ -1887,10 +1888,12 @@
     #3 \q_stop #4 #5 {#6} {#7}
     \exp_not:n
       {
-        \__msg_kernel_warning:nnxxxx { kernel } { invalid-variant }
+        \@@_generate_variant_loop_warning:nnxxxx { kernel } { invalid-variant }
           {#7} { \token_to_str:N #5 } {#1} {#2}
       }
   }
+\cs_new_protected:Npn \@@_generate_variant_loop_warning:nnxxxx
+  { \__msg_kernel_warning:nnxxxx }
 %    \end{macrocode}
 % \end{macro}
 %
