Stop mentioning an unimportant underlying internal function in doc of mappings

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -429,8 +429,8 @@
 %   Use outside of a |\clist_map_...| scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
-%     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before further items are taken
+%     When the mapping is broken, additional tokens may be inserted
+%     before further items are taken
 %     from the input stream. This depends on the design of the mapping
 %     function.
 %   \end{texnote}
@@ -457,8 +457,8 @@
 %   Use outside of a |\clist_map_...| scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
-%     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before the \meta{code} is
+%     When the mapping is broken, additional tokens may be inserted
+%     before the \meta{code} is
 %     inserted into the input stream.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
