--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -578,8 +578,8 @@
 %   Use outside of a \cs[no-index]{tl_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
-%     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before the \meta{tokens} are
+%     When the mapping is broken, additional tokens may be inserted
+%     before the \meta{tokens} are
 %     inserted into the input stream.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
@@ -604,8 +604,8 @@
 %   Use outside of a \cs[no-index]{tl_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
-%     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before the \meta{code} is
+%     When the mapping is broken, additional tokens may be inserted
+%     before the \meta{code} is
 %     inserted into the input stream.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
