--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -381,8 +381,8 @@
 %   Use outside of a \cs[no-index]{ior_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
-%     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before further items are taken
+%     When the mapping is broken, additional tokens may be inserted
+%     before further items are taken
 %     from the input stream. This depends on the design of the mapping
 %     function.
 %   \end{texnote}
@@ -409,8 +409,8 @@
 %   Use outside of a \cs[no-index]{ior_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
-%     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before the \meta{code} is
+%     When the mapping is broken, additional tokens may be inserted
+%     before the \meta{code} is
 %     inserted into the input stream.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
