--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -373,6 +373,12 @@
 %   \end{verbatim}
 %   Use outside of a \cs[no-index]{prop_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
+%   \begin{texnote}
+%     When the mapping is broken, additional tokens may be inserted
+%     before further items are taken
+%     from the input stream. This depends on the design of the mapping
+%     function.
+%   \end{texnote}
 % \end{function}
 %
 % \begin{function}[updated = 2012-06-29, rEXP]{\prop_map_break:n}
@@ -395,6 +401,12 @@
 %   \end{verbatim}
 %   Use outside of a \cs[no-index]{prop_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
+%   \begin{texnote}
+%     When the mapping is broken, additional tokens may be inserted
+%     before the \meta{code} is
+%     inserted into the input stream.
+%     This depends on the design of the mapping function.
+%   \end{texnote}
 % \end{function}
 %
 % \section{Viewing property lists}
