--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -495,8 +495,8 @@
 %   Use outside of a \cs[no-index]{str_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
-%     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before continuing with the
+%     When the mapping is broken, additional tokens may be inserted
+%     before continuing with the
 %     code that follows the loop.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
@@ -521,8 +521,8 @@
 %   Use outside of a \cs[no-index]{str_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
-%     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before the \meta{code} is
+%     When the mapping is broken, additional tokens may be inserted
+%     before the \meta{code} is
 %     inserted into the input stream.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
