Remove definition of \mode_leave_vertical: from xfss: it is in l3candidates
The definition is different though so maybe we should worry about a change in
behaviour.

--- a/l3trial/xfont/xfss.dtx
+++ b/l3trial/xfont/xfss.dtx
@@ -563,10 +563,11 @@
 %
 % \begin{macro}{\mode_leave_vertical:}
 % \begin{macro}{\xfss_text_in_math:n}
+%   \pkg{expl3}'s \cs{mode_leave_vertical:} is different from \LaTeXe's.
 %   \LaTeXe's \cs{leavevmode} and \cs{mbox}
 %    \begin{macrocode}
-\cs_new_protected:Npn \mode_leave_vertical:
-  { \hbox_unpack_clear:N \c_empty_box }
+ % \cs_new_protected:Npn \mode_leave_vertical:
+ %   { \hbox_unpack_clear:N \c_empty_box }
 \cs_if_free:NT \xfss_text_in_math:n
   {
     \cs_new_protected:Npn \xfss_text_in_math:n
