Also test ptex and uptex in l3kernel-extras (see #420)

--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1047,7 +1047,7 @@
         }
       \tl_put_right:Nx \l__char_internal_tl
         {
-          \int_compare:nTF { \tex_delcode:D \l__char_code_int = -1 }
+          \int_compare:nTF { \tex_delcode:D \l__char_code_int < 0 }
             { \\ not ~ a ~ delimiter }
             {
               \\ delimiter ~ code \
@@ -1055,71 +1055,76 @@
             }
         }
       \__char_if_in_font:nNTF \l__char_code_int \tex_font:D
-        {
-          \tl_put_right:Nx \l__char_internal_tl
-            {
-              \\ size ~ in ~ current ~ font:
-              \iow_newline: \ \ \ \
-              ht~\tex_the:D \etex_fontcharht:D \tex_font:D \l__char_code_int , \
-              wd~\tex_the:D \etex_fontcharwd:D \tex_font:D \l__char_code_int , \
-              dp~\tex_the:D \etex_fontchardp:D \tex_font:D \l__char_code_int , \
-              ic~\tex_the:D \etex_fontcharic:D \tex_font:D \l__char_code_int
-            }
-        }
+        { \__char_show_in_font: }
         {
           \tl_put_right:Nx \l__char_internal_tl
             { \\ not ~ in ~ current ~ font }
         }
-      \int_compare:nF { \__char_show_code:n { ef } = 0 }
-        {
-          \tl_put_right:Nx \l__char_internal_tl
-            {
-              \\ expansion ~ factor \
-              \__char_show_code:n { ef }
-            }
-        }
-      \bool_lazy_and:nnF
-        { \__char_show_p:n { lp } }
-        { \__char_show_p:n { rp } }
-        {
-          \tl_put_right:Nx \l__char_internal_tl
-            {
-              \\ protrusion: \
-              left ~ margin ~ \__char_show_code:n { lp } , \
-              right ~ margin ~ \__char_show_code:n { rp }
-            }
-        }
-      \bool_lazy_all:nF
-        {
-          { \__char_show_p:n { knbs } }
-          { \__char_show_p:n { stbs } }
-          { \__char_show_p:n { shbs } }
-        }
-        {
-          \tl_put_right:Nx \l__char_internal_tl
-            {
-              \\ bscodes: \
-              \__char_show_code:n { knbs } \
-              plus ~ \__char_show_code:n { stbs } \
-              minus ~ \__char_show_code:n { shbs }
-            }
-        }
-      \bool_lazy_and:nnF
-        { \__char_show_p:n { knbc } }
-        { \__char_show_p:n { knac } }
-        {
-          \tl_put_right:Nx \l__char_internal_tl
-            {
-              \\ knccodes: \
-              before ~ \__char_show_code:n { knbc } , \
-              after ~ \__char_show_code:n { knac }
-            }
-        }
-      \tl_put_right:Nx \l__char_internal_tl
-        { \\ tagcode ~ \__char_show_code:n { tag } }
       \__msg_show_pre:nnnnnn { LaTeX/kernel } { show-char } {#1} { } { } { }
       \__msg_show_wrap:n { \l__char_internal_tl }
     \group_end:
+  }
+\cs_new_protected:Npn \__char_show_in_font:
+  {
+    \tl_put_right:Nx \l__char_internal_tl
+      {
+        \\ size ~ in ~ current ~ font:
+        \iow_newline: \ \ \ \
+        ht~\tex_the:D \etex_fontcharht:D \tex_font:D \l__char_code_int , \
+        wd~\tex_the:D \etex_fontcharwd:D \tex_font:D \l__char_code_int , \
+        dp~\tex_the:D \etex_fontchardp:D \tex_font:D \l__char_code_int , \
+        ic~\tex_the:D \etex_fontcharic:D \tex_font:D \l__char_code_int
+      }
+    \int_compare:nF { \__char_show_code:n { ef } = 0 }
+      {
+        \tl_put_right:Nx \l__char_internal_tl
+          {
+            \\ expansion ~ factor \
+            \__char_show_code:n { ef }
+          }
+      }
+    \bool_lazy_and:nnF
+      { \__char_show_p:n { lp } }
+      { \__char_show_p:n { rp } }
+      {
+        \tl_put_right:Nx \l__char_internal_tl
+          {
+            \\ protrusion: \
+            left ~ margin ~ \__char_show_code:n { lp } , \
+            right ~ margin ~ \__char_show_code:n { rp }
+          }
+      }
+    \bool_lazy_all:nF
+      {
+        { \__char_show_p:n { knbs } }
+        { \__char_show_p:n { stbs } }
+        { \__char_show_p:n { shbs } }
+      }
+      {
+        \tl_put_right:Nx \l__char_internal_tl
+          {
+            \\ bscodes: \
+            \__char_show_code:n { knbs } \
+            plus ~ \__char_show_code:n { stbs } \
+            minus ~ \__char_show_code:n { shbs }
+          }
+      }
+    \bool_lazy_and:nnF
+      { \__char_show_p:n { knbc } }
+      { \__char_show_p:n { knac } }
+      {
+        \tl_put_right:Nx \l__char_internal_tl
+          {
+            \\ knccodes: \
+            before ~ \__char_show_code:n { knbc } , \
+            after ~ \__char_show_code:n { knac }
+          }
+      }
+    \int_compare:nF { \__char_show_code:n { tag } = 0 }
+      {
+        \tl_put_right:Nx \l__char_internal_tl
+          { \\ tagcode ~ \__char_show_code:n { tag } }
+      }
   }
 \cs_new:Npn \__char_show_p:n #1
   { \int_compare_p:n { \__char_show_code:n {#1} = 0 } }
