Detect local assignments to global variables and vice-versa (see #410)

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -356,21 +356,25 @@
 % \begin{variable}{\c_@@_corners_prop}
 %   The \enquote{corners}; of a coffin define the real content, as
 %   opposed to the \TeX{} bounding box. They all start off in the same
-%   place, of course.
+%   place, of course.  The \cs{debug_suspend:} and \cs{debug_resume:}
+%   are needed because we are assigning to a constant variable.
 %    \begin{macrocode}
 \prop_new:N \c_@@_corners_prop
+\debug_suspend:
 \prop_put:Nnn \c_@@_corners_prop { tl } { { 0pt } { 0pt } }
 \prop_put:Nnn \c_@@_corners_prop { tr } { { 0pt } { 0pt } }
 \prop_put:Nnn \c_@@_corners_prop { bl } { { 0pt } { 0pt } }
 \prop_put:Nnn \c_@@_corners_prop { br } { { 0pt } { 0pt } }
+\debug_resume:
 %    \end{macrocode}
 % \end{variable}
 %
 % \begin{variable}{\c_@@_poles_prop}
 %   Pole positions are given for horizontal, vertical and reference-point
-%   based values.
+%   based values.  Again, need \cs{debug_suspend:} and \cs{debug_resume:}.
 %    \begin{macrocode}
 \prop_new:N \c_@@_poles_prop
+\debug_suspend:
 \tl_set:Nn \l_@@_internal_tl { { 0pt } { 0pt } { 0pt } { 1000pt } }
 \prop_put:Nno \c_@@_poles_prop { l }  { \l_@@_internal_tl }
 \prop_put:Nno \c_@@_poles_prop { hc } { \l_@@_internal_tl }
@@ -382,6 +386,7 @@
 \prop_put:Nno \c_@@_poles_prop { B }  { \l_@@_internal_tl }
 \prop_put:Nno \c_@@_poles_prop { H }  { \l_@@_internal_tl }
 \prop_put:Nno \c_@@_poles_prop { T }  { \l_@@_internal_tl }
+\debug_resume:
 %    \end{macrocode}
 % \end{variable}
 %
@@ -506,38 +511,23 @@
 %   Creating a new coffin means making the underlying box and adding the
 %   data structures. These are created globally, as there is a need to
 %   avoid any strange effects if the coffin is created inside a group.
-%   This means that the usual rule about \cs[no-index]{l_\ldots} variables has
-%   to be broken.  The \cs{__debug_suspend_log:} and
-%   \cs{__debug_resume_log:} functions prevent \cs{prop_clear_new:c}
-%   from writing useless information to the log file; however they only
-%   exist if debugging is enabled.
+%   This means that the usual rule about \cs[no-index]{l_\ldots}
+%   variables has to be broken.  The \cs{debug_suspend:} and
+%   \cs{debug_resume:} functions prevent these checks.  They also
+%   prevent \cs{prop_clear_new:c} from writing useless information to
+%   the log file.
 %    \begin{macrocode}
-\__debug:TF
+\cs_new_protected:Npn \coffin_new:N #1
   {
-    \cs_new_protected:Npn \coffin_new:N #1
-      {
-        \box_new:N #1
-        \__debug_suspend_log:
-        \prop_clear_new:c { l_@@_corners_ \__int_value:w #1 _prop }
-        \prop_clear_new:c { l_@@_poles_   \__int_value:w #1 _prop }
-        \prop_gset_eq:cN { l_@@_corners_ \__int_value:w #1 _prop }
-          \c_@@_corners_prop
-        \prop_gset_eq:cN { l_@@_poles_ \__int_value:w #1 _prop }
-          \c_@@_poles_prop
-        \__debug_resume_log:
-      }
-  }
-  {
-    \cs_new_protected:Npn \coffin_new:N #1
-      {
-        \box_new:N #1
-        \prop_clear_new:c { l_@@_corners_ \__int_value:w #1 _prop }
-        \prop_clear_new:c { l_@@_poles_   \__int_value:w #1 _prop }
-        \prop_gset_eq:cN { l_@@_corners_ \__int_value:w #1 _prop }
-          \c_@@_corners_prop
-        \prop_gset_eq:cN { l_@@_poles_ \__int_value:w #1 _prop }
-          \c_@@_poles_prop
-      }
+    \box_new:N #1
+    \debug_suspend:
+    \prop_clear_new:c { l_@@_corners_ \__int_value:w #1 _prop }
+    \prop_clear_new:c { l_@@_poles_   \__int_value:w #1 _prop }
+    \prop_gset_eq:cN { l_@@_corners_ \__int_value:w #1 _prop }
+      \c_@@_corners_prop
+    \prop_gset_eq:cN { l_@@_poles_ \__int_value:w #1 _prop }
+      \c_@@_poles_prop
+    \debug_resume:
   }
 \cs_generate_variant:Nn \coffin_new:N { c }
 %    \end{macrocode}
