--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1960,6 +1960,15 @@
         'check-declarations',~'deprecation',~'log-functions',~not~'#1'.
       }
     \@@_kernel_new:nnn { kernel } { expr } { '#2'~in~#1 }
+    \@@_kernel_new:nnnn { kernel } { local-global }
+      { Inconsistent~local/global~assignment }
+      {
+        \c_@@_coding_error_text_tl
+        \if:w l #2 Local \else: Global \fi: \
+        assignment~to~a~
+        \if:w l #1 local \else: \if:w g #1 global \else: constant \fi: \fi: \
+        variable~'#3'.
+      }
     \@@_kernel_new:nnnn { kernel } { non-declared-variable }
       { The~variable~#1~has~not~been~declared~\msg_line_context:. }
       {
