Fix a few wrong local/global assignments detected by last commit

--- a/l3experimental/xgalley/xgalley.dtx
+++ b/l3experimental/xgalley/xgalley.dtx
@@ -1402,6 +1402,7 @@
 %    \end{macrocode}
 %   A bit more complex for the array penalties. Although the interface here
 %   does not expose the arrays, it is necessary to correctly save them.
+%   We suspend debugging to allow an assignment to a constant.
 %    \begin{macrocode}
     \seq_map_inline:Nn \c_@@_parbreak_multi_seq
       {
@@ -1418,15 +1419,25 @@
       }
   }
 \seq_new:N \c_@@_parbreak_multi_seq
-\seq_gput_right:Nn \c_@@_parbreak_multi_seq { club_penalties }
-\seq_gput_right:Nn \c_@@_parbreak_multi_seq { display_club_penalties }
-\seq_gput_right:Nn \c_@@_parbreak_multi_seq { display_widow_penalties }
-\seq_gput_right:Nn \c_@@_parbreak_multi_seq { widow_penalties }
+\debug_suspend:
+\seq_gset_from_clist:Nn \c_@@_parbreak_multi_seq
+  {
+    club_penalties ,
+    display_club_penalties ,
+    display_widow_penalties ,
+    widow_penalties ,
+  }
+\debug_resume:
 \seq_new:N \c_@@_parbreak_single_seq
-\seq_gput_right:Nn \c_@@_parbreak_single_seq { parbreak_badness }
-\seq_gput_right:Nn \c_@@_parbreak_single_seq { broken_penalty }
-\seq_gput_right:Nn \c_@@_parbreak_single_seq { post_display_penalty }
-\seq_gput_right:Nn \c_@@_parbreak_single_seq { pre_display_penalty }
+\debug_suspend:
+\seq_gset_from_clist:Nn \c_@@_parbreak_single_seq
+  {
+    parbreak_badness ,
+    broken_penalty ,
+    post_display_penalty ,
+    pre_display_penalty ,
+  }
+\debug_resume:
 %    \end{macrocode}
 % \end{variable}
 %    \begin{macrocode}
