--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -717,13 +717,15 @@
 % \end{variable}
 %
 % \begin{variable}{\c_@@_keytypes_arg_seq}
-%   A list of keytypes which also need additional data (an argument), used
-%   to parse the keytype correctly.
+%   A list of keytypes which also need additional data (an argument),
+%   used to parse the keytype correctly.  We suspend debugging to allow
+%   an assignment to a constant.
 %    \begin{macrocode}
 \seq_new:N \c_@@_keytypes_arg_seq
-\seq_put_right:Nn \c_@@_keytypes_arg_seq { choice }
-\seq_put_right:Nn \c_@@_keytypes_arg_seq { function }
-\seq_put_right:Nn \c_@@_keytypes_arg_seq { instance }
+\debug_suspend:
+\seq_gset_from_clist:Nn \c_@@_keytypes_arg_seq
+  { choice , function , instance }
+\debug_resume:
 %    \end{macrocode}
 %  \end{variable}
 %
