Add l3candidates \seq_const_from_clist:Nn (see #257)

--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -721,11 +721,8 @@
 %   used to parse the keytype correctly.  We suspend debugging to allow
 %   an assignment to a constant.
 %    \begin{macrocode}
-\seq_new:N \c_@@_keytypes_arg_seq
-\debug_suspend:
-\seq_gset_from_clist:Nn \c_@@_keytypes_arg_seq
+\seq_const_from_clist:Nn \c_@@_keytypes_arg_seq
   { choice , function , instance }
-\debug_resume:
 %    \end{macrocode}
 %  \end{variable}
 %
