--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -483,6 +483,15 @@
 %   \end{texnote}
 % \end{function}
 %
+% \begin{function}[added = 2017-11-28]
+%   {\seq_const_from_clist:Nn,  \seq_const_from_clist:cn}
+%   \begin{syntax}
+%     \cs{seq_const_from_clist:Nn} \meta{sequence} \Arg{comma-list}
+%   \end{syntax}
+%   Converts the data in the \meta{comma list} into a constant
+%   \meta{sequence}: the original \meta{comma list} is unchanged.
+% \end{function}
+%
 % \section{Additions to \pkg{l3skip}}
 %
 % \begin{function}{\skip_split_finite_else_action:nnNN}
@@ -2117,6 +2126,18 @@
       { \seq_item:Nn #1 { \int_rand:nn { 1 } { \seq_count:N #1 } } }
   }
 \cs_generate_variant:Nn \seq_rand_item:N { c }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\seq_const_from_clist:Nn, \seq_const_from_clist:cn}
+%   Almost identical to \cs{seq_set_from_clist:Nn}.
+%    \begin{macrocode}
+\cs_new_protected:Npn \seq_const_from_clist:Nn #1#2
+  {
+    \tl_const:Nx #1
+      { \s_@@ \clist_map_function:nN {#2} \@@_wrap_item:n }
+  }
+\cs_generate_variant:Nn \seq_const_from_clist:Nn { c }
 %    \end{macrocode}
 % \end{macro}
 %
