Add l3candidates \prop_const_from_keyval:Nn (see #257)

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2018,6 +2018,8 @@
   { A~property~list~was~misused. }
 \@@_kernel_new:nnn { kernel } { negative-replication }
   { Negative~argument~for~\prg_replicate:nn. }
+\@@_kernel_new:nnn { kernel } { prop-keyval }
+  { Missing/extra~'='~in~'#1'~(in~'..._keyval:Nn') }
 \@@_kernel_new:nnn { kernel } { unknown-comparison }
   { Relation~'#1'~unknown:~use~=,~<,~>,~==,~!=,~<=,~>=. }
 \@@_kernel_new:nnn { kernel } { zero-step }
