--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -370,6 +370,17 @@
 %   space might be removed as well.
 % \end{function}
 %
+% \section{Additions to \pkg{l3prg}}
+%
+% \begin{function}[added = 2017-11-28]{\bool_const:Nn, \bool_const:cn}
+%   \begin{syntax}
+%     \cs{bool_const:Nn} \meta{boolean} \Arg{boolexpr}
+%   \end{syntax}
+%   Creates a new constant \meta{boolean} or raises an error if the name
+%   is already taken. The value of the \meta{boolean} is set globally to
+%   the result of evaluating the \meta{boolexpr}.
+% \end{function}
+%
 % \section{Additions to \pkg{l3prop}}
 %
 % \begin{function}[EXP]{\prop_count:N, \prop_count:c}
@@ -1959,6 +1970,20 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+%
+% \subsection{Additions to \pkg{l3prg}}
+%
+% \begin{macro}[added = 2017-11-28]{\bool_const:Nn, \bool_const:cn}
+%   A merger between \cs{tl_const:Nn} and \cs{bool_set:Nn}.
+%    \begin{macrocode}
+\cs_new_protected:Npn \bool_const:Nn #1#2
+  {
+    \__chk_if_free_cs:N #1
+    \tex_global:D \tex_chardef:D #1 = \bool_if_p:n {#2}
+  }
+\cs_generate_variant:Nn \bool_const:Nn { c }
+%    \end{macrocode}
 % \end{macro}
 %
 % \subsection{Additions to \pkg{l3prop}}
