Check local/global assignments to int/dim/skip/muskip/box (see #410)

--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -901,10 +901,12 @@
 % \testfile*
 %   Assigning the contents of a box to be another box.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \box_set_eq:NN #1#2
   { \tex_setbox:D #1 \tex_copy:D #2 }
-\cs_new_protected:Npn \box_gset_eq:NN
-  { \tex_global:D \box_set_eq:NN }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \box_gset_eq:NN #1#2
+  { \tex_global:D \tex_setbox:D #1 \tex_copy:D #2 }
 \cs_generate_variant:Nn \box_set_eq:NN  { c , Nc , cc }
 \cs_generate_variant:Nn \box_gset_eq:NN { c , Nc , cc }
 %    \end{macrocode}
@@ -926,10 +928,12 @@
 %    Assigning the contents of a box to be another box.
 %    This clears the second box globally (that's how \TeX{} does it).
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \box_set_eq_clear:NN #1#2
   { \tex_setbox:D #1 \tex_box:D #2 }
-\cs_new_protected:Npn \box_gset_eq_clear:NN
-  { \tex_global:D  \box_set_eq_clear:NN }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \box_gset_eq_clear:NN #1#2
+  { \tex_global:D \tex_setbox:D #1 \tex_box:D #2 }
 \cs_generate_variant:Nn \box_set_eq_clear:NN  { c , Nc , cc }
 \cs_generate_variant:Nn \box_gset_eq_clear:NN { c , Nc , cc }
 %    \end{macrocode}
@@ -1087,10 +1091,12 @@
 % \testfile*
 %    Set a box to the previous box.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \box_set_to_last:N #1
   { \tex_setbox:D #1 \tex_lastbox:D }
-\cs_new_protected:Npn \box_gset_to_last:N
-  { \tex_global:D \box_set_to_last:N }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \box_gset_to_last:N #1
+  { \tex_global:D \tex_setbox:D #1 \tex_lastbox:D }
 \cs_generate_variant:Nn \box_set_to_last:N  { c }
 \cs_generate_variant:Nn \box_gset_to_last:N { c }
 %    \end{macrocode}
@@ -1205,9 +1211,12 @@
 % \begin{macro}{\hbox_gset:Nn, \hbox_gset:cn}
 % \testfile*
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set:Nn #1#2
   { \tex_setbox:D #1 \tex_hbox:D { \group_begin: #2 \group_end: } }
-\cs_new_protected:Npn \hbox_gset:Nn { \tex_global:D \hbox_set:Nn }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \hbox_gset:Nn #1#2
+  { \tex_global:D \tex_setbox:D #1 \tex_hbox:D { \group_begin: #2 \group_end: } }
 \cs_generate_variant:Nn \hbox_set:Nn { c }
 \cs_generate_variant:Nn \hbox_gset:Nn { c }
 %    \end{macrocode}
@@ -1220,14 +1229,25 @@
 %   Storing material in a horizontal box with a specified width.
 %   Again, put the dimension expression in parentheses when debugging.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { {#1} { (#2) } {#3} }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_local:N #1 }
+  { }
+  { {#1} { (#2) } {#3} }
 \cs_new_protected:Npn \hbox_set_to_wd:Nnn #1#2#3
   {
     \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:w #2 \__dim_eval_end:
       { \group_begin: #3 \group_end: }
   }
-\cs_new_protected:Npn \hbox_gset_to_wd:Nnn
-  { \tex_global:D \hbox_set_to_wd:Nnn }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_global:N #1 }
+  { }
+  { {#1} { (#2) } {#3} }
+\cs_new_protected:Npn \hbox_gset_to_wd:Nnn #1#2#3
+  {
+    \tex_global:D \tex_setbox:D #1 \tex_hbox:D
+      to \__dim_eval:w #2 \__dim_eval_end:
+      { \group_begin: #3 \group_end: }
+  }
 \cs_generate_variant:Nn \hbox_set_to_wd:Nnn { c }
 \cs_generate_variant:Nn \hbox_gset_to_wd:Nnn { c }
 %    \end{macrocode}
@@ -1241,14 +1261,20 @@
 %    Storing material in a horizontal box. This type is useful in
 %    environment definitions.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set:Nw  #1
   {
     \tex_setbox:D #1 \tex_hbox:D
       \c_group_begin_token
         \group_begin:
   }
-\cs_new_protected:Npn \hbox_gset:Nw
-  { \tex_global:D \hbox_set:Nw }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \hbox_gset:Nw  #1
+  {
+    \tex_global:D \tex_setbox:D #1 \tex_hbox:D
+      \c_group_begin_token
+        \group_begin:
+  }
 \cs_generate_variant:Nn \hbox_set:Nw  { c }
 \cs_generate_variant:Nn \hbox_gset:Nw { c }
 \cs_new_protected:Npn \hbox_set_end:
@@ -1266,15 +1292,27 @@
 % \begin{macro}{\hbox_gset_to_wd:Nnw, \hbox_gset_to_wd:cnw}
 %   Combining the above ideas.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { {#1} { (#2) } }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_local:N #1 }
+  { }
+  { {#1} { (#2) } }
 \cs_new_protected:Npn \hbox_set_to_wd:Nnw #1#2
   {
     \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:w #2 \__dim_eval_end:
       \c_group_begin_token
         \group_begin:
   }
-\cs_new_protected:Npn \hbox_gset_to_wd:Nnw
-  { \tex_global:D \hbox_set_to_wd:Nnw }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_global:N #1 }
+  { }
+  { {#1} { (#2) } }
+\cs_new_protected:Npn \hbox_gset_to_wd:Nnw #1#2
+  {
+    \tex_global:D \tex_setbox:D #1 \tex_hbox:D
+      to \__dim_eval:w #2 \__dim_eval_end:
+      \c_group_begin_token
+        \group_begin:
+  }
 \cs_generate_variant:Nn \hbox_set_to_wd:Nnw  { c }
 \cs_generate_variant:Nn \hbox_gset_to_wd:Nnw { c }
 %    \end{macrocode}
@@ -1367,12 +1405,18 @@
 % \testfile*
 %   Storing material in a vertical box with a natural height.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set:Nn #1#2
   {
     \tex_setbox:D #1 \tex_vbox:D
       { \group_begin: #2 \par \group_end: }
   }
-\cs_new_protected:Npn \vbox_gset:Nn  { \tex_global:D \vbox_set:Nn }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \vbox_gset:Nn #1#2
+  {
+    \tex_global:D \tex_setbox:D #1 \tex_vbox:D
+      { \group_begin: #2 \par \group_end: }
+  }
 \cs_generate_variant:Nn \vbox_set:Nn  { c }
 \cs_generate_variant:Nn \vbox_gset:Nn { c }
 %    \end{macrocode}
@@ -1385,13 +1429,18 @@
 %   Storing material in a vertical box with a natural height and reference
 %   point at the baseline of the first object in the box.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_top:Nn #1#2
   {
     \tex_setbox:D #1 \tex_vtop:D
       { \group_begin: #2 \par \group_end: }
   }
-\cs_new_protected:Npn \vbox_gset_top:Nn
-  { \tex_global:D \vbox_set_top:Nn }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \vbox_gset_top:Nn #1#2
+  {
+    \tex_global:D \tex_setbox:D #1 \tex_vtop:D
+      { \group_begin: #2 \par \group_end: }
+  }
 \cs_generate_variant:Nn \vbox_set_top:Nn { c }
 \cs_generate_variant:Nn \vbox_gset_top:Nn { c }
 %    \end{macrocode}
@@ -1403,14 +1452,25 @@
 %  \testfile*
 %  Storing material in a vertical box with a specified height.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { {#1} { (#2) } {#3} }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_local:N #1 }
+  { }
+  { {#1} { (#2) } {#3} }
 \cs_new_protected:Npn \vbox_set_to_ht:Nnn #1#2#3
   {
     \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:w #2 \__dim_eval_end:
       { \group_begin: #3 \par \group_end: }
   }
-\cs_new_protected:Npn \vbox_gset_to_ht:Nnn
-  { \tex_global:D \vbox_set_to_ht:Nnn }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_global:N #1 }
+  { }
+  { {#1} { (#2) } {#3} }
+\cs_new_protected:Npn \vbox_gset_to_ht:Nnn #1#2#3
+  {
+    \tex_global:D \tex_setbox:D #1 \tex_vbox:D
+      to \__dim_eval:w #2 \__dim_eval_end:
+      { \group_begin: #3 \par \group_end: }
+  }
 \cs_generate_variant:Nn \vbox_set_to_ht:Nnn  { c }
 \cs_generate_variant:Nn \vbox_gset_to_ht:Nnn { c }
 %    \end{macrocode}
@@ -1424,14 +1484,20 @@
 %   Storing material in a vertical box. This type is useful in
 %   environment definitions.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set:Nw #1
   {
     \tex_setbox:D #1 \tex_vbox:D
       \c_group_begin_token
         \group_begin:
   }
-\cs_new_protected:Npn \vbox_gset:Nw
-  { \tex_global:D \vbox_set:Nw }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \vbox_gset:Nw #1
+  {
+    \tex_global:D \tex_setbox:D #1 \tex_vbox:D
+      \c_group_begin_token
+        \group_begin:
+  }
 \cs_generate_variant:Nn \vbox_set:Nw  { c }
 \cs_generate_variant:Nn \vbox_gset:Nw { c }
 \cs_new_protected:Npn \vbox_set_end:
@@ -1450,15 +1516,27 @@
 % \begin{macro}{\vbox_gset_to_ht:Nnw, \vbox_gset_to_ht:cnw}
 %   A combination of the above ideas.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { {#1} { (#2) } }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_local:N #1 }
+  { }
+  { {#1} { (#2) } }
 \cs_new_protected:Npn \vbox_set_to_ht:Nnw #1#2
   {
     \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:w #2 \__dim_eval_end:
       \c_group_begin_token
         \group_begin:
   }
-\cs_new_protected:Npn \vbox_gset_to_ht:Nnw
-  { \tex_global:D \vbox_set_to_ht:Nnw }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_global:N #1 }
+  { }
+  { {#1} { (#2) } }
+\cs_new_protected:Npn \vbox_gset_to_ht:Nnw #1#2
+  {
+    \tex_global:D \tex_setbox:D #1 \tex_vbox:D
+      to \__dim_eval:w #2 \__dim_eval_end:
+      \c_group_begin_token
+        \group_begin:
+  }
 \cs_generate_variant:Nn \vbox_set_to_ht:Nnw  { c }
 \cs_generate_variant:Nn \vbox_gset_to_ht:Nnw { c }
 %    \end{macrocode}
@@ -1482,7 +1560,10 @@
 % \testfile*
 %   Splitting a vertical box in two.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { {#1} {#2} { (#3) } }
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_local:N #1 }
+  { }
+  { {#1} {#2} { (#3) } }
 \cs_new_protected:Npn \vbox_set_split_to_ht:NNn #1#2#3
   { \tex_setbox:D #1 \tex_vsplit:D #2 to \__dim_eval:w #3 \__dim_eval_end: }
 %    \end{macrocode}
