--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -151,8 +151,7 @@
 %   converting from integers to dimensions, this is the conversion
 %   factor.
 %    \begin{macrocode}
-\dim_new:N \c_one_sp_dim
-\dim_set:Nn \c_one_sp_dim { 1 sp }
+\dim_const:Nn \c_one_sp_dim { 1 sp }
 %    \end{macrocode}
 % \end{variable}
 %
