--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1200,6 +1200,8 @@
 %   \tn{mathchardef} but that's engine dependent. As a result, there is some
 %   set up code to determine what can be done. No full engine testing just yet
 %   so everything is a little awkward.
+%   We cannot use \cs{int_gset:Nn} because (when |check-declarations| is
+%   enabled) this runs some checks that constants would fail.
 %    \begin{macrocode}
 \__debug_patch_args:nNNpn
   { {#1} { \__debug_chk_expr:nNnN {#2} \@@_eval:w { } \int_const:Nn } }
@@ -1208,20 +1210,20 @@
     \int_compare:nNnTF {#2} < \c_zero
       {
         \int_new:N #1
-        \int_gset:Nn #1 {#2}
+        \tex_global:D
       }
       {
         \int_compare:nNnTF {#2} > \c__max_constdef_int
           {
             \int_new:N #1
-            \int_gset:Nn #1 {#2}
+            \tex_global:D
           }
           {
             \__chk_if_free_cs:N #1
-            \tex_global:D \@@_constdef:Nw #1 =
-              \@@_eval:w #2 \@@_eval_end:
+            \tex_global:D \@@_constdef:Nw
           }
       }
+    #1 = \@@_eval:w #2 \@@_eval_end:
   }
 \cs_generate_variant:Nn \int_const:Nn { c }
 \if_int_odd:w 0
@@ -1248,7 +1250,9 @@
 % \UnitTested
 %   Functions that reset an \meta{integer} register to zero.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \int_zero:N  #1 { #1 = \c_zero }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \int_gzero:N #1 { \tex_global:D #1 = \c_zero }
 \cs_generate_variant:Nn \int_zero:N  { c }
 \cs_generate_variant:Nn \int_gzero:N { c }
@@ -1275,11 +1279,14 @@
 %   {\int_gset_eq:NN, \int_gset_eq:cN, \int_gset_eq:Nc, \int_gset_eq:cc}
 % \UnitTested
 %   Setting equal means using one integer inside the set function of
-%   another.
+%   another.  Check that assigned integer is local/global.  No need to
+%   check that the other one is defined as \TeX{} does it for us.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \int_set_eq:NN #1#2 { #1 = #2 }
 \cs_generate_variant:Nn \int_set_eq:NN {       c }
 \cs_generate_variant:Nn \int_set_eq:NN { Nc , cc }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \int_gset_eq:NN #1#2 { \tex_global:D #1 = #2 }
 \cs_generate_variant:Nn \int_gset_eq:NN {       c }
 \cs_generate_variant:Nn \int_gset_eq:NN { Nc , cc }
@@ -1299,6 +1306,22 @@
 %
 % \subsection{Setting and incrementing integers}
 %
+% Several functions here have a signature |:Nn| and are such that when
+% debugging, the first argument should be checked to be a local/global
+% variable and the second should be wrapped in code for an expression.
+% The temporary function \cs{@@_tmp:w} finds the name |#3| of the
+% function being redefined and writes the appropriate patch.
+%    \begin{macrocode}
+\cs_set_protected:Npn \@@_tmp:w #1#2#3
+  {
+    \__debug_patch_args:nnnNNpn
+      { #1 ##1 }
+      { }
+      { {##1} { \__debug_chk_expr:nNnN {##2} \@@_eval:w { } #3 } }
+    #2 #3
+  }
+%    \end{macrocode}
+%
 % \begin{macro}{\int_add:Nn, \int_add:cn}
 % \UnitTested
 % \begin{macro}{\int_gadd:Nn, \int_gadd:cn}
@@ -1307,20 +1330,23 @@
 % \UnitTested
 % \begin{macro}{\int_gsub:Nn, \int_gsub:cn}
 % \UnitTested
-%    Adding and subtracting to and from a counter \ldots
+%    Adding and subtracting to and from a counter.  For each function,
+%    the debugging code produced by \cs{@@_tmp:w} checks that the
+%    assigned variable is correctly local/global and wraps the
+%    expression in some checking code.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn
-  { {#1} { \__debug_chk_expr:nNnN {#2} \@@_eval:w { } \int_add:Nn } }
+\@@_tmp:w \__debug_chk_var_local:N
 \cs_new_protected:Npn \int_add:Nn #1#2
   { \tex_advance:D #1 by \@@_eval:w #2 \@@_eval_end: }
-\__debug_patch_args:nNNpn
-  { {#1} { \__debug_chk_expr:nNnN {#2} \@@_eval:w { } \int_sub:Nn } }
+\@@_tmp:w \__debug_chk_var_local:N
 \cs_new_protected:Npn \int_sub:Nn #1#2
   { \tex_advance:D #1 by - \@@_eval:w #2 \@@_eval_end: }
-\cs_new_protected:Npn \int_gadd:Nn
-  { \tex_global:D \int_add:Nn }
-\cs_new_protected:Npn \int_gsub:Nn
-  { \tex_global:D \int_sub:Nn }
+\@@_tmp:w \__debug_chk_var_global:N
+\cs_new_protected:Npn \int_gadd:Nn #1#2
+  { \tex_global:D \tex_advance:D #1 by \@@_eval:w #2 \@@_eval_end: }
+\@@_tmp:w \__debug_chk_var_global:N
+\cs_new_protected:Npn \int_gsub:Nn #1#2
+  { \tex_global:D \tex_advance:D #1 by - \@@_eval:w #2 \@@_eval_end: }
 \cs_generate_variant:Nn \int_add:Nn  { c }
 \cs_generate_variant:Nn \int_gadd:Nn { c }
 \cs_generate_variant:Nn \int_sub:Nn  { c }
@@ -1342,14 +1368,18 @@
 %   Incrementing and decrementing of integer registers is done with
 %   the following functions.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \int_incr:N #1
   { \tex_advance:D #1 \c_one }
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \int_decr:N #1
   { \tex_advance:D #1 - \c_one }
-\cs_new_protected:Npn \int_gincr:N
-  { \tex_global:D \int_incr:N }
-\cs_new_protected:Npn \int_gdecr:N
-  { \tex_global:D \int_decr:N }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \int_gincr:N #1
+  { \tex_global:D \tex_advance:D #1 \c_one }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \int_gdecr:N #1
+  { \tex_global:D \tex_advance:D #1 - \c_one }
 \cs_generate_variant:Nn \int_incr:N  { c }
 \cs_generate_variant:Nn \int_decr:N  { c }
 \cs_generate_variant:Nn \int_gincr:N { c }
@@ -1365,14 +1395,16 @@
 % \begin{macro}{\int_gset:Nn, \int_gset:cn}
 % \UnitTested
 %   As integers are register-based \TeX{} issues an error
-%   if they are not defined. Thus there is no need for the checking
-%   code seen with token list variables.
+%   if they are not defined. Thus there is no need to check their
+%   existence as for token list variables.  However, the code that
+%   checks whether the assignment is local or global is still needed.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn
-  { {#1} { \__debug_chk_expr:nNnN {#2} \@@_eval:w { } \int_set:Nn } }
+\@@_tmp:w \__debug_chk_var_local:N
 \cs_new_protected:Npn \int_set:Nn #1#2
   { #1 ~ \@@_eval:w #2 \@@_eval_end: }
-\cs_new_protected:Npn \int_gset:Nn { \tex_global:D \int_set:Nn }
+\@@_tmp:w \__debug_chk_var_global:N
+\cs_new_protected:Npn \int_gset:Nn #1#2
+  { \tex_global:D #1 ~ \@@_eval:w #2 \@@_eval_end: }
 \cs_generate_variant:Nn \int_set:Nn  { c }
 \cs_generate_variant:Nn \int_gset:Nn { c }
 %    \end{macrocode}
