Check that constants are never subject to local/global assignments
Of course using low-level \cs_ functions one can still assign to constants.

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1203,7 +1203,9 @@
 %   We cannot use \cs{int_gset:Nn} because (when |check-declarations| is
 %   enabled) this runs some checks that constants would fail.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn
+\__debug_patch_args:nnnNNpn
+  { \__debug_chk_var_scope:NN c #1 }
+  { }
   { {#1} { \__debug_chk_expr:nNnN {#2} \@@_eval:w { } \int_const:Nn } }
 \cs_new_protected:Npn \int_const:Nn #1#2
   {
