--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -375,7 +375,12 @@
 % \UnitTested
 %    Allocate a new quark.
 %    \begin{macrocode}
-\cs_new_protected:Npn \quark_new:N #1 { \tl_const:Nn #1 {#1} }
+\__debug_patch:nnNNpn { \__debug_chk_var_scope:NN q #1 } { }
+\cs_new_protected:Npn \quark_new:N #1
+  {
+    \__chk_if_free_cs:N #1
+    \cs_gset_nopar:Npn #1 {#1}
+  }
 %    \end{macrocode}
 % \end{macro}
 %
