--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1977,6 +1977,7 @@
 % \begin{macro}[added = 2017-11-28]{\bool_const:Nn, \bool_const:cn}
 %   A merger between \cs{tl_const:Nn} and \cs{bool_set:Nn}.
 %    \begin{macrocode}
+\__debug_patch:nnNNpn { \__debug_chk_var_scope:NN c #1 } { }
 \cs_new_protected:Npn \bool_const:Nn #1#2
   {
     \__chk_if_free_cs:N #1
